Node will not update Pass input on pass toggling #39547

Closed
opened 2014-04-01 13:57:51 +02:00 by Maverick · 8 comments

System Information
Operating system and graphics card
win7 64bit gtx titan

Blender Version
blender-2.70-6aa75d3-win64

Short description of error
Two scenes S1 and S2(full copy). Each with a render layer. On S1 the node editor is pinned.
Disabling Z pass on S2 does not update the node editor. Disabling Z, saving the file and reloading shows the node correctly though.

Exact steps for others to reproduce the error
Check the attached blend file and image. Just open and toggle the Z pass. The node of the render layer will not update.
However if you save the blend and reload it will update the UI correctly.

Thank you.

**System Information** Operating system and graphics card win7 64bit gtx titan **Blender Version** blender-2.70-6aa75d3-win64 **Short description of error** Two scenes S1 and S2(full copy). Each with a render layer. On S1 the node editor is pinned. Disabling Z pass on S2 does not update the node editor. Disabling Z, saving the file and reloading shows the node correctly though. **Exact steps for others to reproduce the error** Check the attached blend file and image. Just open and toggle the Z pass. The node of the render layer will not update. However if you save the blend and reload it will update the UI correctly. Thank you.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author
![render_layer_pass_UI_bug.png](https://archive.blender.org/developer/F83666/render_layer_pass_UI_bug.png) [render_layer_pass_UI_bug.blend](https://archive.blender.org/developer/F83668/render_layer_pass_UI_bug.blend)
Lukas Tönne self-assigned this 2014-04-02 09:55:44 +02:00
Member

Problem is that toggling render passes only updates compo nodes in the same scene - regardless of which scene the individual render layer nodes are actually linked to. In the test file the node editor tree is pinned and shows the S1 scene's nodes, which won't get updated when toggling passes for S2 ... hmm

Problem is that toggling render passes only updates compo nodes in the same scene - regardless of which scene the individual render layer nodes are actually linked to. In the test file the node editor tree is pinned and shows the S1 scene's nodes, which won't get updated when toggling passes for S2 ... hmm

This issue was referenced by blender/blender-addons-contrib@288147334c

This issue was referenced by blender/blender-addons-contrib@288147334ce81cf0be533c15f3698b88ef7c63f3

This issue was referenced by 288147334c

This issue was referenced by 288147334ce81cf0be533c15f3698b88ef7c63f3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 288147334c.

Closed by commit 288147334c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39547
No description provided.